--------
v6.0-git
--------

[mms] Add 'Edit As New' to Forward button dropdown menu in dynamic view.
[mms] Allow identifying addresses to always display images for without
      requiring to add them to the addressbook.
[mms] Disable text selection in dynamic view for everything but
      compose/message bodies.
[mms] Rewritten vCal/iCal attachment viewer/handler.
[mms] S/MIME certificate import from message data no longer requires popup
      window.
[mms] PGP key import from message attachment no longer requires popup window.
[mms] Improve PGP key import screen.
[mms] Truncate large address lists (50+) by default in dynamic message views.
[mms] Moved AJAX core features to Horde_Core package.
[jan] Add reporting as spam/innocent to smartphone view.
[mms] Workaround overquota error when deleting messages and using Trash
      mailbox.
[jan] Add basic search to smartphone view.
[jan] Add resume and "edit as new" to smartphone view.
[mms] Hide deleted now works with threaded mailboxes.
[mms] Threaded sorts now work in all search mailboxes (Request #9700).
[mms] Improved threading performance.
[mms] Improved date searching to search by range.
[mms] Added 'mbox_sort' hook.
[mms] Make mailbox columns the same order in traditional view as in dynamic
      view.
[jan] Add mailbox paging to smartphone view.
[jan] Add copy and move to smartphone view.
[jan] Add deleting messages to smartphone view.
[jan] Add reply, forward and redirect to smartphone view.
[jan] Add compose functionality to smartphone view.
[mms] Accurately track changes to virtual folders in dynamic folder tree (Bug
      #10886).
[mms] Traditional mode now requires javascript on the browser.
[mms] Added 'mbox_special' hook (rsalmon@mbpgroup.com, Request #10801).
[mms] Converted stationery to the Templates special mailbox (Request #9296).
[mms] Hide inactive buttons in dynamic view instead of dimming them.
[mms] Added config option to limit size of messages with linked attachments
      (Request #6247).